Feat: Add logger, logic and pages for 404 and 500 errors

--- a/src/main/resources/text.properties
+++ b/src/main/resources/text.properties
@@ -1,5 +1,5 @@
-title_add_book=Library: Add book
-title_edit_book=Library: Edit book
+title_add_book=Add book • Library
+title_edit_book=Edit book • Library
 library=Library
 orders=Orders
 eng=Eng
@@ -11,14 +11,14 @@ field_title=Title
 field_author=Author
 field_count=Count
 confirm=Confirm
-title_catalog=Library: Catalog
+title_catalog=Catalog • Library
 catalog=Catalog
 to_order=To order
 oops=Ooops:)
 oops_message=It seems that there are no copies of this book left
 ok=Ok
 delete_book=Delete book
-title_orders=Library: Orders
+title_orders=Orders • Library
 processing=Processing
 active=Active
 cancel_order=Cancel order
@@ -29,13 +29,13 @@ reading_room=Reading room
 subscription=Subscription
 return_book=Return book
 has_on_hand=has on hand
-title_sign_in=Library: Sign In
+title_sign_in=Sign In • Library
 sign_in=Sign in
 field_login=Login
 field_password=Password
 not_registered=Not registered? Sign up
 sign_up=Sign up
-title_sign_up=Library: Sign Up
+title_sign_up=Sign Up • Library
 field_first_name=First Name
 field_last_name=Last Name
 login_is_busy=Login is busy
@@ -54,5 +54,11 @@ error_add_book=Error while adding book
 error_count=Count should be a number not less than 0
 error_edit_book_data=Book was not edited because of incorrect input
 error_edit_book=Error while editing book
-title_sign_in_or_sign_up=Library: Sign In or Sing Up
+title_sign_in_or_sign_up=Sign In or Sing Up • Library
 or=or
+title_404=Error 404 • Library
+error_404=Error 404
+error_404_message=Sorry, but requesting resource not found
+title_500=Error 500 • Library
+error_500=Error 500
+error_500_message=Sorry, but internal server error occurred
