--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -49,4 +49,11 @@
     <error-code>404</error-code>
     <location>/WEB-INF/jsp/404.jsp</location>
   </error-page>
+
+  <resource-ref>
+    <description>DB Connection</description>
+    <res-ref-name>jdbc/library</res-ref-name>
+    <res-type>javax.sql.DataSource</res-type>
+    <res-auth>Container</res-auth>
+  </resource-ref>
 </web-app>
